syntax = "proto3";

package metastore.v1;

message BlockList {
  string tenant = 1;
  uint32 shard = 2;
  repeated string blocks = 3;
}

message BlockMeta {
  uint32 format_version = 1;
  // Block ID is a unique identifier for the block.
  // This is the only field that is not included into
  // the string table.
  string id = 2;
  // Optional. Empty if compaction level is 0.
  int32 tenant = 3;
  uint32 shard = 4;
  uint32 compaction_level = 5;
  int64 min_time = 6;
  int64 max_time = 7;
  int32 created_by = 8;
  uint64 size = 9;
  repeated Dataset datasets = 10;
  // String table contains strings of the block.
  // By convention, the first string is always an empty string.
  repeated string string_table = 11;
}

message Dataset {
  int32 tenant = 1;
  int32 name = 2;
  int64 min_time = 3;
  int64 max_time = 4;

  // Table of contents lists data sections within the tenant
  // service region. The offsets are absolute.
  //
  // The interpretation of the table of contents is specific
  // to the metadata format version. By default, the sections are:
  //  - 0: profiles.parquet
  //  - 1: index.tsdb
  //  - 2: symbols.symdb
  repeated uint64 table_of_contents = 5;
  // Size of the section in bytes.
  uint64 size = 6;

  // TODO: Delete. Use labels instead.
  // Profile types present in the tenant service data.
  repeated int32 profile_types = 7;
  // Length prefixed label key-value pairs.
  repeated int32 labels = 8;
}
